added NamedItem class, refined impl. of some methods