@@ -1,7 +1,5 @@
 package model;
 
-import java.util.Arrays;
-import java.util.HashSet;
 import java.util.Set;
 
 /**
@@ -16,6 +14,6 @@ public class ProfileLoader {
     public Set<Player> load() {
         // TEMPORARY!
         // will load saved player profiles
-        return new HashSet<Player>(Arrays.asList(new PlayerHuman("ProfileName1"), new PlayerHuman("ProfileName2"), new PlayerHuman("ProfileName3")));
+        return Set.of(new PlayerHuman("PLACEHOLDER_1"), new PlayerHuman("PLACEHOLDER_2"), new PlayerHuman("PLACEHOLDER_3"));
     }
 }
